# DEMO_WS

./: .dockerignore  .gitignore  Dockerfile  README.md  SPEC.md  devices.py  requirements.txt  samples.py  streamlit_app.py
.claude/: settings.local.json
.streamlit/: config.toml
backend/: pyproject.toml
backend/app/: main.py  schemas.py  settings.py
backend/app/routers/: config.py
backend/tests/: conftest.py  test_config_api.py
config/: demo_data.yaml
frontend/: index.html  package.json  pnpm-lock.yaml  quasar.config.ts  tsconfig.json
frontend/src/: App.vue  main.ts
frontend/src/boot/: axios.ts
frontend/src/components/: CompositionTable.vue  DeviceCard.vue  DevicePanel.vue  ExperimentBanner.vue  ExperimentDesignModal.vue  ScoreTrend.vue
frontend/src/css/: app.css
frontend/src/router/: index.ts  routes.ts
frontend/src/stores/: config.ts  experiment.ts  trend.ts
frontend/src/utils/: scores.ts
tasks/: plan.md  todo.md
tests/: test_devices.py  test_samples.py
worklog/: worklog_2026-05-12.md  worklog_2026-05-13.md
