[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "ws-demo-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pyyaml>=6.0",
    "pydantic-settings>=2.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
